[package]
name = "pikchr"
version = "0.1.2"
authors = ["Daniel Silverstone <dsilvers@digital-scurf.org>"]
edition = "2018"
description = "PIC-like diagramming language to SVG converter"
repository = "https://github.com/kinnison/pikchr"
readme = "README.md"
keywords = ["markdown", "md", "html", "svg", "pic"]
license = "MIT OR Apache-2.0"

[dependencies]
libc = "0.2"

[build-dependencies]
cc = "1.0"

[workspace]
members = [
    "pikchr-cli",
]
